# corydottech

./: .env.example  .gitignore  README.md  manage.py  mypy.ini  pyproject.toml  requirements.txt
auth_keys/: admin.py  apps.py  models.py  tests.py
auth_keys/migrations/: 0001_initial.py  0002_alter_authkey_encrypted_api_key.py
certifications/: admin.py  models.py
certifications/migrations/: 0001_initial.py  0002_certification_skills_used.py  0003_alter_certification_source.py
contacts/: admin.py  forms.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py
core/: tests.py
corydottech/: api.py  asgi.py  settings.py  urls.py  wsgi.py
custom_user/: admin.py  apps.py  forms.py  models.py  tests.py
custom_user/migrations/: 0001_initial.py
dev_log/: admin.py  apps.py  models.py  urls.py  views.py
dev_log/migrations/: 0001_initial.py  0002_alter_devlogentry_options.py  0003_alter_devlogentry_published_date.py
home_sensors/: admin.py  apps.py  models.py  router.py
home_sensors/migrations/: 0001_initial.py
jobs/: admin.py  models.py  tests.py
jobs/migrations/: 0001_initial.py  0002_alter_job_description.py  0003_alter_job_description.py
pages/: tests.py  urls.py  views.py
projects/: admin.py  models.py  tests.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project_slug_project_summary.py  0003_alter_project_slug.py  0004_project_github_url.py  0005_project_begin_date_project_end_date_and_more.py  0006_project_is_published.py  0007_alter_project_description.py  0008_alter_project_description.py
sensors/: admin.py  api.py  models.py  schemas.py  tests.py
sensors/migrations/: 0001_initial.py  (+1 more)
templates/: base.html
(+16 files in other folders)
