[project]
name = "corydottech"
version = "0.2.0"
description = "My personal portfolio site."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.3",
    "django>=5.2.1",
    "django-browser-reload>=1.18.0",
    "django-environ>=0.12.0",
    "django-markdownify>=0.9.5",
    "django-ninja>=1.4.1",
    "django-recaptcha>=4.1.0",
    "django-stubs>=5.2.0",
    "django-taggit>=6.1.0",
    "django-tailwind>=4.0.1",
    "django-unfold>=0.59.0",
    "gunicorn>=23.0.0",
    "html2text>=2025.4.15",
    "mypy>=1.15.0",
    "pillow>=11.2.1",
    "psycopg[binary]>=3.2.9",
    "python-slugify>=8.0.4",
    "ruff>=0.11.11",
    "sendgrid>=6.12.2",
    "uvicorn>=0.34.2",
]

[tool.ruff]
select = ["E", "F", "B", "I", "UP", "DJ"]
line-length = 88
target-version = "py313"
exclude = ["migrations", "venv", ".venv"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
